--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <h1>FLAGWORD</h1>
     <div id="flag-container">
       <!-- Aqui vai aparecer a bandeira -->
-      <img id="flag" src="C:\Users\arnal\OneDrive\Desktop\projetos\clone\FlagWord\bandeiras\brasil.png" alt="Bandeira" />
+      <img id="flag" src="bandeiras/brasil.png" alt="Bandeira" />
     </div>
     <input type="text" id="input-pais" placeholder="Digite o país" />
     <button id="btn-adivinhar">Adivinhar</button>
