--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
   <div class="container">
     <h1>FLAGWORD</h1>
     <div id="flag-container">
-      <!-- Aqui vai aparecer a bandeira -->
-      <img id="flag" src="C:\Users\arnal\OneDrive\Desktop\projetos\clone\FlagWord\bandeiras\brasil.png" alt="Bandeira" />
-    </div>
+        <!-- Aqui vai aparecer a bandeira -->
+        <img id="flag" src="" alt="Bandeira" />
+      </div>
     <input type="text" id="input-pais" placeholder="Digite o país" />
     <button id="btn-adivinhar">Adivinhar</button>
 
