--- a/index.html
+++ b/index.html
@@ -9,16 +9,9 @@
 <body>
   <div class="container">
     <h1>FLAGWORD</h1>
-    <div id="flag-container">
-<<<<<<< HEAD
-        <!-- Aqui vai aparecer a bandeira -->
-        <img id="flag" src="" alt="Bandeira" />
-      </div>
-=======
-      <!-- Aqui vai aparecer a bandeira -->
+    <div>
       <img id="flag" src="bandeiras/brasil.png" alt="Bandeira" />
-    </div>
->>>>>>> 276d6795a85573ae24592767eb1620f91192f54f
+    </div>    
     <input type="text" id="input-pais" placeholder="Digite o país" />
     <button id="btn-adivinhar">Adivinhar</button>
 
