--- a/index.html
+++ b/index.html
@@ -10,22 +10,19 @@
   <div class="container">
     <h1>FLAGWORD</h1>
     <div id="flag-container">
-<<<<<<< HEAD
-        <!-- Aqui vai aparecer a bandeira -->
-        <img id="flag" src="" alt="Bandeira" />
-      </div>
-=======
       <!-- Aqui vai aparecer a bandeira -->
       <img id="flag" src="bandeiras/brasil.png" alt="Bandeira" />
     </div>
->>>>>>> 276d6795a85573ae24592767eb1620f91192f54f
     <input type="text" id="input-pais" placeholder="Digite o país" />
+    
     <button id="btn-adivinhar">Adivinhar</button>
 
     <div class="dicas">
       <div class="dica">
         <p>Bandeira:</p>
-        <div id="dica-bandeira" class="indicador"></div>
+        <div id="dica-bandeira">
+            <img id="dica-bandeira-img" src="" alt="Bandeira do país">
+        </div>
       </div>
       <div class="dica">
         <p>Continente:</p>
@@ -44,6 +41,7 @@
         <div id="dica-hemisferio" class="indicador"></div>
       </div>
     </div>
+    
 
     <div id="indicadores-de-cor">
       <p>Correto</p> <span class="cor correto"></span>
