--- a/index.html
+++ b/index.html
@@ -9,16 +9,16 @@
 <body>
   <div class="container">
     <h1>FLAGWORD</h1>
-    <div>
+    <div class="flag-container">
       <img id="flag" src="bandeiras/brasil.png" alt="Bandeira" />
-    </div>    
+    </div>
     <input type="text" id="input-pais" placeholder="Digite o país" />
     <button id="btn-adivinhar">Adivinhar</button>
 
     <div class="dicas">
       <div class="dica">
         <p>Bandeira:</p>
-        <div id="dica-bandeira" class="indicador"></div>
+        <div id="dica-bandeira" class="indicador"><img id="dica-bandeira-img" src="" alt="Bandeira do país"></div>
       </div>
       <div class="dica">
         <p>Continente:</p>
