--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <div class="dicas">
       <div class="dica">
         <p>Bandeira:</p>
-        <div id="dica-bandeira" class="indicador"><img id="dica-bandeira-img" src="" alt="Bandeira do país"></div>
+        <div><img id="dica-bandeira-img"id="dica-bandeira" class="indicador" ></div>
       </div>
       <div class="dica">
         <p>Continente:</p>
