--- a/index.html
+++ b/index.html
@@ -8,9 +8,11 @@
 </head>
 <body>
   <div class="container">
+ <!--   <img id=logo src="imgs/logo.png">
+    <img id=config src="imgs/config.png">-->
     <h1>FLAGWORD</h1>
     <div class="flag-container">
-      <img id="flag" src="bandeiras/brasil.png" alt="Bandeira" />
+      <img id="flag" src=" " alt="Bandeira" />
     </div>
     <input type="text" id="input-pais" placeholder="Digite o país" />
     <button id="btn-adivinhar">Adivinhar</button>
@@ -18,7 +20,7 @@
     <div class="dicas">
       <div class="dica">
         <p>Bandeira:</p>
-        <div><img id="dica-bandeira-img"id="dica-bandeira" class="indicador" ></div>
+        <img id="dica-bandeira-img">
       </div>
       <div class="dica">
         <p>Continente:</p>
