--- a/index.html
+++ b/index.html
@@ -4,18 +4,18 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Flagword</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
   <div class="container">
  <!--   <img id=logo src="imgs/logo.png">
     <img id=config src="imgs/config.png">-->
-    <h1>FLAGWORD</h1>
+    <br><h1>FLAGWORD</h1>
     <div class="flag-container">
       <img id="flag" src=" " alt="Bandeira" />
     </div>
-    <input type="text" id="input-pais" placeholder="Digite o país" />
-    <button id="btn-adivinhar">Adivinhar</button>
+    <input type="text" id="input-pais" placeholder="Digite um país"/>
+    <button id="btn-adivinhar" class="buttton"><p>Adivinhar</p></button>
 
     <div class="dicas">
       <div class="dica">
@@ -39,7 +39,7 @@
         <div id="dica-hemisferio" class="indicador"></div>
       </div>
     </div>
-
+    <br>
     <div id="indicadores-de-cor">
       <p>Correto</p> <span class="cor correto"></span>
       <p>Parcial</p> <span class="cor parcial"></span>
@@ -47,6 +47,6 @@
     </div>
   </div>
   
-  <script src="script.js"></script>
+  <script src="scripts/script.js"></script>
 </body>
 </html>
